# simulation

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json  setup_env.sh
ec2/: CMakeLists.txt  README.md  main.cc
ec2/.devcontainer/: Dockerfile
ec2/common/: ApiKeyManager.cc  ApiKeyManager.h  jsoncpp_sv_shim.cc
ec2/config/: settings.json
ec2/controllers/: MyHttpController.cc  MyHttpController.h  MyWebSocketServer.cc  MyWebSocketServer.h  RestController.cc  RestController.h
ec2/dao/: CharacterDAO.cc  CharacterDAO.h
ec2/ini/: GW.ini
ec2/models/: Character.h
ec2/services/: ApiClient.cc  ApiClient.h  CharacterService.cc  CharacterService.h  ServiceFactory.cc  ServiceFactory.h
ec2/services/kafka/: KafkaConfig.cc  KafkaConfig.h  KafkaConsumer.cc  KafkaConsumer.h  KafkaManager.cc  KafkaManager.h  KafkaProducer.cc  KafkaProducer.h
ec2/test/: CMakeLists.txt
logic_server/logic_server/: README.md  build.gradle  settings.gradle
logic_server/logic_server/src/main/java/com/example/logic_server/: LogicServerApplication.java
logic_server/logic_server/src/main/java/com/example/logic_server/domain/character/controller/: CharacterController.java  SearchController.java
logic_server/logic_server/src/main/java/com/example/logic_server/domain/character/dto/: CharacterDetailDto.java  CharacterDto.java  CharacterMessage.java  CharacterResponse.java  EquipmentDto.java  StatusDto.java
logic_server/logic_server/src/main/java/com/example/logic_server/domain/character/entity/: CharacterEntity.java  CharacterId.java  EquipmentEntity.java  EquipmentId.java  StatusEntity.java
logic_server/logic_server/src/main/java/com/example/logic_server/domain/character/repository/: CharacterRepository.java  EquipmentRepository.java  StatusRepository.java
logic_server/logic_server/src/main/java/com/example/logic_server/domain/character/service/: CharacterService.java  EquipmentService.java  StatusService.java
logic_server/logic_server/src/main/java/com/example/logic_server/domain/user/controller/: AuthController.java
logic_server/logic_server/src/main/java/com/example/logic_server/domain/user/dto/: LoginRequest.java  RegisterRequest.java  UserResponse.java
logic_server/logic_server/src/main/java/com/example/logic_server/domain/user/entity/: MemberEntity.java
logic_server/logic_server/src/main/java/com/example/logic_server/domain/user/repository/: MemberRepository.java
logic_server/logic_server/src/main/java/com/example/logic_server/domain/user/service/: MemberService.java
logic_server/logic_server/src/main/java/com/example/logic_server/global/config/: KafkaConfig.java  RestTemplateConfig.java  SecurityConfig.java
logic_server/logic_server/src/main/java/com/example/logic_server/global/constant/: ServerConstants.java
logic_server/logic_server/src/main/java/com/example/logic_server/global/exception/: GlobalExceptionHandler.java
logic_server/logic_server/src/main/java/com/example/logic_server/global/security/: UserDetailsServiceImpl.java
logic_server/logic_server/src/main/java/com/example/logic_server/global/sse/: SseRegistry.java
logic_server/logic_server/src/main/resources/: application.yml
logic_server/logic_server/src/test/java/com/example/logic_server/: LogicServerApplicationTests.java
web/: readme.md
web/web_client/frontend/: README.md  package-lock.json  package.json  vite.config.js
web/web_client/frontend/src/: App.css  App.jsx
web/web_client/frontend/src/api/: apiClient.js
web/web_client/frontend/src/components/common/: Navbar.jsx
web/web_client/frontend/src/constants/: servers.js
web/web_client/frontend/src/layouts/: MainLayout.jsx
web/web_client/frontend/src/pages/: Auction.jsx  Dashboard.jsx  Home.jsx  MyPage.jsx  RaidManager.jsx  Ranking.jsx  SearchResults.jsx  Timeline.jsx  TimelineResults.jsx
web/web_client/frontend/src/pages/Auth/: Login.jsx  Register.jsx
web/web_client/frontend/src/pages/Character/: CharDetailMain.jsx
web/web_client/frontend/src/pages/Character/tabs/: AvatarTab.jsx  BuffTab.jsx  DamageTab.jsx  EquipmentTab.jsx  InfoTab.jsx  SkillTab.jsx  SkillTreeTab.jsx
web/web_client/frontend/src/store/: authStore.js  favoriteStore.js  historyStore.js
(+6 files in other folders)
